// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render SelectButton component render component correctly without movie id 1`] = `
<span
  className="selectButton"
>
  <NavLink
    activeClassName="selectedOption_active"
    className="selectedOption"
    onClick={[Function]}
    to="/1/movie/1"
  >
    Action
  </NavLink>
  <span
    className="selectArrow"
  />
  <ul
    className="selectOptionsList"
  >
    <li
      className="selectOption"
    >
      <NavLink
        className="selectOptionLink"
        data-text="Action"
        data-value={1}
        onClick={[Function]}
        to="/1/movie/1"
      >
        Action
      </NavLink>
    </li>
    <li
      className="selectOption"
    >
      <NavLink
        className="selectOptionLink"
        data-text="Scifi"
        data-value={2}
        onClick={[Function]}
        to="/2/movie/1"
      >
        Scifi
      </NavLink>
    </li>
  </ul>
</span>
`;

exports[`render SelectButton component render correctly 1`] = `
<span
  className="selectButton"
>
  <NavLink
    activeClassName="selectedOption_active"
    className="selectedOption"
    onClick={[Function]}
    to="/1/movie/1"
  >
    Action
  </NavLink>
  <span
    className="selectArrow"
  />
  <ul
    className="selectOptionsList"
  >
    <li
      className="selectOption"
    >
      <NavLink
        className="selectOptionLink"
        data-text="Action"
        data-value={1}
        onClick={[Function]}
        to="/1/movie/1"
      >
        Action
      </NavLink>
    </li>
    <li
      className="selectOption"
    >
      <NavLink
        className="selectOptionLink"
        data-text="Scifi"
        data-value={2}
        onClick={[Function]}
        to="/2/movie/1"
      >
        Scifi
      </NavLink>
    </li>
  </ul>
</span>
`;

exports[`render SelectButton component render handleClick correctly 1`] = `
<span
  className="selectButton active"
>
  <NavLink
    activeClassName={null}
    className="selectedOption"
    onClick={[Function]}
    to="test"
  >
    Title
  </NavLink>
  <span
    className="selectArrow"
  />
  <ul
    className="selectOptionsList"
  >
    <li
      className="selectOption"
    >
      <NavLink
        className="selectOptionLink"
        data-text="Action"
        data-value={1}
        onClick={[Function]}
        to="/1"
      >
        Action
      </NavLink>
    </li>
    <li
      className="selectOption"
    >
      <NavLink
        className="selectOptionLink"
        data-text="Scifi"
        data-value={2}
        onClick={[Function]}
        to="/2"
      >
        Scifi
      </NavLink>
    </li>
  </ul>
</span>
`;

exports[`render SelectButton component render select genre button active state correctly 1`] = `
<span
  className="selectButton"
>
  <NavLink
    activeClassName="selectedOption_active"
    className="selectedOption"
    onClick={[Function]}
    to="/1"
  >
    Action
  </NavLink>
  <span
    className="selectArrow"
  />
  <ul
    className="selectOptionsList"
  >
    <li
      className="selectOption"
    >
      <NavLink
        className="selectOptionLink"
        data-text="Action"
        data-value={1}
        onClick={[Function]}
        to="/1"
      >
        Action
      </NavLink>
    </li>
    <li
      className="selectOption"
    >
      <NavLink
        className="selectOptionLink"
        data-text="Scifi"
        data-value={2}
        onClick={[Function]}
        to="/2"
      >
        Scifi
      </NavLink>
    </li>
  </ul>
</span>
`;

exports[`render SelectButton component render select genre opening click correctly 1`] = `
<span
  className="selectButton active"
>
  <NavLink
    activeClassName="selectedOption_active"
    className="selectedOption"
    onClick={[Function]}
    to="/1"
  >
    Action
  </NavLink>
  <span
    className="selectArrow"
  />
  <ul
    className="selectOptionsList"
  >
    <li
      className="selectOption"
    >
      <NavLink
        className="selectOptionLink"
        data-text="Action"
        data-value={1}
        onClick={[Function]}
        to="/1"
      >
        Action
      </NavLink>
    </li>
    <li
      className="selectOption"
    >
      <NavLink
        className="selectOptionLink"
        data-text="Scifi"
        data-value={2}
        onClick={[Function]}
        to="/2"
      >
        Scifi
      </NavLink>
    </li>
  </ul>
</span>
`;
